# ozm

./: .gitignore  .ozm.yaml  AGENTS.md  CLAUDE.md  README.md  package.json  pyproject.toml
.claude/: settings.json
.github/workflows/: publish.yml  test.yml
Formula/: ozm.rb
app/: Package.swift
app/.build/: build.db  plugin-tools.yaml
app/.build/arm64-apple-macosx/debug/: OzmApp  description.json
app/.build/arm64-apple-macosx/debug/Modules/: OzmApp.swiftdoc  OzmApp.swiftmodule  OzmApp.swiftsourceinfo
app/.build/arm64-apple-macosx/debug/OzmApp.build/: ApprovalQueue.d  ApprovalQueue.swiftdeps  ApprovalRequest.d  (+15 more)
app/Sources/: OzmApp.swift
app/Sources/Models/: ApprovalQueue.swift  ApprovalRequest.swift
app/Sources/Networking/: SocketServer.swift
app/Sources/Views/: ApprovalRow.swift  ApprovalWindowManager.swift  MenuBarView.swift  SettingsView.swift  SyntaxHighlighter.swift
docs/: commands.md  configuration.md
extensions/: pi.ts
scripts/: update_formula.py
src/ozm/: agent.py  app.py  approve.py  audit.py  cli.py  cmd.py  config.py  doctor.py  exit_codes.py  git.py  github_graphql.py  install.py  run.py  shell.py  socket_client.py  storage.py
tests/: test_agent_metadata.py  test_approval_dialog.py  test_audit_log.py  test_config_persistence.py  test_doctor_cli.py  test_enforcement.py  test_git_policy.py  test_github_graphql_allow.py  test_hook_policy.py  test_pi_integration_features.py  test_run_status_reset.py  test_security.py  test_snapshot_diff.py  test_storage.py
tests/fixtures/: hello.go  hello.py  hello.rs  hello.sh  hello.ts  hello.zig
(+178 files in other folders)
