[tool.poetry]
name = "oberzugriffsmeister"
version = "0.0.0"
description = "Content-aware script execution gate and git rule enforcer"
authors = ["Kamyar <claude@kamy.me>"]
packages = [{include = "ozm", from = "src"}]

[tool.poetry.scripts]
ozm = "ozm.cli:cli"

[tool.poetry.dependencies]
python = ">=3.12"
click = ">=8.0"
pyyaml = ">=6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
